<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/seting_back"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btn_truncate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:onClick="onCLick"
            android:text="@string/btn_truncate" />

        <Button
            android:id="@+id/btn_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_truncate"
            android:layout_centerHorizontal="true"
            android:onClick="onCLick"
            android:text="@string/btn_clear" />
    </RelativeLayout>

	<ImageView 
	    android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/delimiter"
	    />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <SeekBar
            android:id="@+id/seek_bar"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:max="12" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignRight="@+id/seek_bar"
            android:text="@string/scroll_dscpt" />


        <TextView
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/seek_bar"
            android:layout_alignParentLeft="true"
            android:layout_alignTop="@+id/seek_bar"
            android:layout_toRightOf="@+id/seek_bar"
            android:text="@string/text_left" />


        <TextView
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/seek_bar"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/textView1"
            android:layout_toLeftOf="@+id/seek_bar"
            android:text="@string/text_right" />

    </RelativeLayout>

</LinearLayout>